app/javascript/flavours/polyam/styles/fairy-floss/diff.scss
html {
  scrollbar-color: $purple3 rgba($purple3, 0.25);
}

::-webkit-scrollbar-thumb {
  background-color: $purplescrollbar;
  border: 0 #f8f8f2;
  border-radius: 50px;
}

::-webkit-scrollbar-thumb:hover {
  background-color: $purplescrollbar;
  border: 0;
}

::-webkit-scrollbar-track:hover {
  background-color: darken($purple2, 6%);
}

.loading-bar {
  background-color: $mint;
}

body.admin {
  background-color: $purple1;
}

// Polyam: Make background of badge darker
.column-link__badge {
  background: $purple1;
}

// Polyam: Restore background of category label
.emoji-mart-category-label span {
  background: var(--dropdown-background-color);
}

.drawer__inner__mastodon {
  // Polyam: var() can't be used in in url()
  background: var(--background-color)
    url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 234.80078 31.757813" width="234.80078" height="31.757812"><path d="M19.599609 0c-1.05 0-2.10039.375-2.90039 1.125L0 16.925781v14.832031h234.80078V17.025391l-16.5-15.900391c-1.6-1.5-4.20078-1.5-5.80078 0l-13.80078 13.099609c-1.6 1.5-4.19883 1.5-5.79883 0L179.09961 1.125c-1.6-1.5-4.19883-1.5-5.79883 0L159.5 14.224609c-1.6 1.5-4.20078 1.5-5.80078 0L139.90039 1.125c-1.6-1.5-4.20078-1.5-5.80078 0l-13.79883 13.099609c-1.6 1.5-4.20078 1.5-5.80078 0L100.69922 1.125c-1.600001-1.5-4.198829-1.5-5.798829 0l-13.59961 13.099609c-1.6 1.5-4.200781 1.5-5.800781 0L61.699219 1.125c-1.6-1.5-4.198828-1.5-5.798828 0L42.099609 14.224609c-1.6 1.5-4.198828 1.5-5.798828 0L22.5 1.125C21.7.375 20.649609 0 19.599609 0z" fill="#{hex-color($ui-base-color)}"/></svg>')
    no-repeat bottom / 100% auto;
}

// Boost Icon

button.icon-button.active {
  .icon-retweet {
    color: $mint;

    &:hover {
      color: $mint;
    }
  }

  &:not(.star-icon, .bookmark-icon)::after {
    color: $mint;
  }
}

.status__prepend {
  .icon-retweet {
    color: $mint;
  }
}

.notification__message {
  .icon-retweet {
    color: $mint;
  }
}

// Toots

// Technically also announcements
.reactions-bar {
  &__item {
    background-color: lighten($purple2, 4%);

    &:hover,
    &:focus,
    &:active {
      background-color: lighten($purple2, 8%);
    }

    &.active {
      background-color: mix(lighten($purple2, 4%), $ui-highlight-color, 80%);

      .reactions-bar__item__count {
        color: lighten($highlight-text-color, 16%);
      }
    }
  }
}

// Polyam: Keep collapse button colored
.status__collapse-button {
  color: $highlight-text-color;

  &:hover,
  &:active,
  &:focus {
    color: $highlight-text-color;
  }
}

.status {
  &__content {
    a {
      color: lighten($ui-highlight-color, 12%);

      &.mention {
        color: $pink;
      }

      &.hashtag {
        color: $lemon;
      }
    }

    // Polyam: Make darker than background
    code,
    pre {
      background-color: darken($ui-base-color, 8%);
    }

    &__spoiler-link {
      color: $purple1;
    }
  }
}

// Polyam: Use same color as hashtags in toot
.hashtag-bar {
  a {
    color: $lemon;
  }
}

// Modals

// Polyam: Apply background to modals,
// but new mute and block modals need to be exempt
// as otherwise it conflicts with border-radius
.modal-root__modal:not(.safety-action-modal) {
  background-color: lighten($purple2, 8%);
}

.safety-action-modal__top,
.safety-action-modal__bottom {
  background: lighten($purple2, 8%);
}

.doodle-modal,
.boost-modal,
.confirmation-modal,
.report-modal,
.actions-modal,
.compare-history-modal,
.report-dialog-modal {
  &__action-bar {
    background-color: $purple2;
  }

  // Textarea in adding alt-text
  &__comment {
    .setting-text {
      background-color: $simple-background-color;
    }
  }

  .status__content {
    &__spoiler-link {
      color: $purple1;
    }
  }

  // select input
  .dialog-option .poll__input {
    color: $purple1;
  }
}

.glitch.local-settings {
  background-color: $purple2;

  &__navigation {
    background-color: lighten($purple2, 8%);

    &__item {
      background-color: lighten($purple2, 8%);
      border-color: $purple2;

      &:hover {
        background-color: $purple2;
      }
    }
  }
}

// Settings

// Uses simple-background and should be white
.qr-code {
  background-color: $white;
}

.admin-wrapper {
  .sidebar {
    ul {
      a {
        &:hover,
        &:focus {
          background-color: $purpleborder;
        }
      }

      ul {
        background-color: $purple1;
      }

      .simple-navigation-active-leaf a {
        background-color: $purpleborder;

        &:hover,
        &:focus {
          background-color: lighten($purpleborder, 8%);
        }
      }
    }
  }

  .content {
    h2 {
      color: $purple4;
    }

    .muted-hint {
      a {
        color: $mint;
      }
    }
  }
}

.table > thead > tr > th {
  color: $lemon;
}

.simple_form {
  input[type='text'],
  input[type='number'],
  input[type='email'],
  input[type='password'],
  input[type='url'],
  input[type='datetime-local'],
  textarea {
    background-color: darken($purple1, 10%);
    border-color: darken($purple1, 14%);

    &:hover {
      border-color: darken($purple1, 20%);
    }

    &:active,
    &:focus {
      background-color: darken($purple1, 8%);
      border-color: $mint;
    }
  }

  select {
    background-color: darken($purple1, 10%);
    border-color: darken($purple1, 14%);

    // Arrows in select
    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 14.933 18.467' height='19.698' width='15.929'><path d='M3.467 14.967l-3.393-3.5H14.86l-3.392 3.5c-1.866 1.925-3.666 3.5-4 3.5-.335 0-2.135-1.575-4-3.5zm.266-11.234L7.467 0 11.2 3.733l3.733 3.734H0l3.733-3.734z' fill='%23c2ffdf'/></svg>");
  }

  .input.boolean label a {
    color: $mint;
  }

  .hint a {
    color: $mint;
  }
}

